==> apache/nuttx/arch/arm/src/max326xx/max32660/max32660_wdt.c <==
#include <nuttx/config.h>
#include <nuttx/arch.h>
#include <stdint.h>
#include <assert.h>
#include <errno.h>
#include <debug.h>
#include <nuttx/irq.h>
#include <nuttx/spinlock.h>
#include <nuttx/clock.h>
#include <nuttx/timers/watchdog.h>
#include <arch/board/board.h>
#include "chip.h"
#include "arm_internal.h"
#include "hardware/max326_wdt.h"
#include "max326_clockconfig.h"
#include "max326_wdt.h"
#define WDT_RESET_DELAY (5 * MSEC_PER_SEC)  /* Five seconds in units of msec */

static int max326_start(struct watchdog_lowerhalf_s *lower)
{
  struct max326_wdt_lowerhalf_s *priv =
    (struct max326_wdt_lowerhalf_s *)lower;
  irqstate_t flags;
  uint32_t ctrl;

  DEBUGASSERT(priv != NULL);

  wdinfo("Entry: enabled=%s timeout=%lu\n",
         (getreg32(MAX326_WDT0_CTRL) & WDT0_CTRL_WDTEN) != 0 ? "Yes" : "No",
         (unsigned long)1 << (31 - priv->exp));

  /* Perform the reset sequence */

  flags = spin_lock_irqsave(NULL);
  max326_wdog_reset(priv);

  /* Enable reset or interrupt */

  max326_int_enable(priv);

  /* Then enable the watchdog timer */

  ctrl  = getreg32(MAX326_WDT0_CTRL);
  ctrl |= WDT0_CTRL_WDTEN;
  putreg32(ctrl, MAX326_WDT0_CTRL);

  spin_unlock_irqrestore(NULL, flags);
  return OK;
}

static int max326_stop(struct watchdog_lowerhalf_s *lower)
{
  irqstate_t flags;
  uint32_t ctrl;

  DEBUGASSERT(priv != NULL);

  wdinfo("Entry: enabled=%s timeout=%lu\n",
         (getreg32(MAX326_WDT0_CTRL) & WDT0_CTRL_WDTEN) != 0 ? "Yes" : "No",
         (unsigned long)1 << (31 - priv->exp));

  /* Disable the watchdog timer, reset, and interrupts */

  flags = spin_lock_irqsave(NULL);
  ctrl  = getreg32(MAX326_WDT0_CTRL);
  ctrl &= ~(WDT0_CTRL_WDTEN | WDT0_CTRL_INTEN | WDT0_CTRL_RSTEN);

  up_disable_irq(MAX326_IRQ_WDT0);
  irq_detach(MAX326_IRQ_WDT0);

  spin_unlock_irqrestore(NULL, flags);
  return OK;
}

static int max326_keepalive(struct watchdog_lowerhalf_s *lower)
{
  struct max326_wdt_lowerhalf_s *priv =
    (struct max326_wdt_lowerhalf_s *)lower;
  irqstate_t flags;

  wdinfo("Ping!\n");

  /* Reset WDT timer */

  flags = spin_lock_irqsave(NULL);
  max326_wdog_reset(priv);
  spin_unlock_irqrestore(NULL, flags);

  return OK;
}

static int max326_getstatus(struct watchdog_lowerhalf_s *lower,
                            struct watchdog_status_s *status)
{
  struct max326_wdt_lowerhalf_s *priv =
    (struct max326_wdt_lowerhalf_s *)lower;
  uint64_t msec;

  wdinfo("Entry\n");
  DEBUGASSERT(priv != NULL && status != NULL);

  /* Return the status flags */

  status->flags = 0;
  if ((getreg32(MAX326_WDT0_CTRL) & WDT0_CTRL_WDTEN) != 0)
    {
      status->flags |= WDFLAGS_ACTIVE;
    }

  status->flags |= priv->handler != NULL ? WDFLAGS_CAPTURE : WDFLAGS_RESET;

  /* Get the timeout value in milliseconds. */

  msec = max326_exp2msec(max326_pclk_frequency(), priv->exp);
  if (msec > UINT32_MAX)
    {
      msec = UINT32_MAX;
    }

  status->timeout = (uint32_t)msec;

  /* Return the time left until the expiration */

  status->timeleft = max326_time_left(priv);

  wdinfo("Status     :\n");
  wdinfo("  flags    : %08x\n", status->flags);
  wdinfo("  timeout  : %d\n",   status->timeout);
  wdinfo("  timeleft : %d\n",   status->timeleft);
  return OK;
}

static int max326_settimeout(struct watchdog_lowerhalf_s *lower,
                             uint32_t timeout)
{
  struct max326_wdt_lowerhalf_s *priv =
    (struct max326_wdt_lowerhalf_s *)lower;
  irqstate_t flags;
  uint32_t ctrl;
  uint8_t exp;

  wdinfo("Entry: timeout=%lu\n", (unsigned long)timeout);
  DEBUGASSERT(priv != NULL);

  /* Reset WDT timer */

  flags = spin_lock_irqsave(NULL);
  max326_wdog_reset(priv);

  /* Convert the timeout value in milliseconds to time exponent used by the
   * max32660.
   */

  exp = max326_msec2exp(timeout);

  /* Update the selected intervals in the CTRL register.  Note that the
   * interrupt and the reset intervals are set to the same value.  The
   * User Guide requires that the reset interval be longer than the
   * interrupt interval.  This is thought to be no problem because in
   * this implementation, either the interrupt or reset behavior is
   * implemented, but not both.
   */

  ctrl  = getreg32(MAX326_WDT0_CTRL);
  ctrl &= ~(WDT0_CTRL_INTPERIOD_MASK | WDT0_CTRL_RSTPERIOD_MASK);
  ctrl |= (WDT0_CTRL_INTPERIOD(exp) | WDT0_CTRL_RSTPERIOD(exp));
  putreg32(ctrl, MAX326_WDT0_CTRL);

  spin_unlock_irqrestore(NULL, flags);
  return OK;
}

static xcpt_t max326_capture(struct watchdog_lowerhalf_s *lower,
                             xcpt_t handler)
{
  struct max326_wdt_lowerhalf_s *priv =
    (struct max326_wdt_lowerhalf_s *)lower;
  irqstate_t flags;
  xcpt_t oldhandler;

  DEBUGASSERT(priv != NULL)
  wdinfo("Handler=%p\n", handler);

  /* Get the old handler */

  flags = spin_lock_irqsave(NULL);
  oldhandler = priv->handler;

  /* Save the new handler */

  priv->handler = handler;

  /* Reset the WDT timer */

  max326_wdog_reset(priv);

  /* Are we adding, removing, or changing a handler?  */

  if ((handler != NULL && oldhandler == NULL) || /* Adding a handler */
      (handler == NULL && oldhandler != NULL))   /* Removing a handler */
    {
      /* Disable/disable the interrupt and reset events appropriately. */

      max326_int_enable(priv);
    }

  spin_unlock_irqrestore(NULL, flags);
  return oldhandler;
}

int max326_wdt_initialize(const char *devpath)
{
  struct max326_wdt_lowerhalf_s *priv = &g_wdtdev;
  void *handle;

  wdinfo("Entry: devpath=%s, mode_sleep=%d, mode_halt=%d\n",
         devpath, mode_sleep, mode_halt);

  /* Initialize the driver state structure. */

  priv->ops = &g_wdtops;

  /* Register the watchdog driver as /dev/watchdog0 */

  handle = watchdog_register(devpath,
                             (struct watchdog_lowerhalf_s *)priv);
  return (handle != NULL) ? OK : -ENODEV;
}
